--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@commitlint/cli": "^13.1.0",
     "@commitlint/config-conventional": "^13.1.0",
     "esbuild": "^0.12.15",
+    "eslint": "^7.31.0",
     "husky": "^7.0.1"
   }
 }
