--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "An age predictor by only get your name :)",
   "main": "index.js",
   "scripts": {
-    "start": ""
+    "start": "",
+    "prepare": "husky install"
   },
   "engines": {
     "node": ">=15.0.0"
@@ -16,6 +17,10 @@
     "@commitlint/config-conventional": "^13.1.0",
     "esbuild": "^0.12.15",
     "eslint": "^7.31.0",
-    "husky": "^7.0.1"
+    "husky": "^7.0.1",
+    "lint-staged": "^11.1.1"
+  },
+  "lint-staged": {
+    "*.js": "eslint --cache"
   }
 }
