--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An age predictor by only get your name :)",
   "main": "index.js",
   "scripts": {
-    "start": "",
+    "start": "node esbuild-server",
     "prepare": "husky install"
   },
   "engines": {
@@ -15,10 +15,14 @@
   "devDependencies": {
     "@commitlint/cli": "^13.1.0",
     "@commitlint/config-conventional": "^13.1.0",
+    "chokidar": "^3.5.2",
+    "dotenv": "^10.0.0",
     "esbuild": "^0.12.15",
+    "esbuild-plugin-sass": "^0.5.2",
     "eslint": "^7.31.0",
     "husky": "^7.0.1",
-    "lint-staged": "^11.1.1"
+    "lint-staged": "^11.1.1",
+    "live-server": "^1.2.1"
   },
   "lint-staged": {
     "*.js": "eslint --cache"
