--- a/.editorConfig
+++ b/.editorConfig
@@ -3,4 +3,5 @@ end_of_line = lf
 insert_final_newline = false
 charset = utf-8
 indent_style = tab
+trim_trailing_whitespace = true;
 indent_size = 2
